[gd_scene load_steps=12 format=3 uid="uid://dwqyhkk4errjo"]

[ext_resource type="Script" uid="uid://e14kku4o055s" path="res://player.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://joytahj0w6no" path="res://ai_controller_3d.gd" id="2_0xm2m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xm2m"]
emission_enabled = true
emission = Color(0.81311, 2.52686e-06, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
material = SubResource("StandardMaterial3D_0xm2m")

[sub_resource type="BoxShape3D" id="BoxShape3D_1bvp3"]

[sub_resource type="BoxMesh" id="BoxMesh_lquwl"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7mycd"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ig7tw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
emission_enabled = true
emission = Color(0, 0.862745, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]
material = SubResource("StandardMaterial3D_h2yge")

[sub_resource type="BoxShape3D" id="BoxShape3D_lquwl"]
size = Vector3(20, 1, 1)

[node name="main" type="Node3D"]

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.6725, 0.526671, 0.0933123)
script = ExtResource("1_ig7tw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
mesh = SubResource("BoxMesh_h2yge")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("BoxShape3D_1bvp3")

[node name="AIController3D" type="Node3D" parent="player"]
script = ExtResource("2_0xm2m")
metadata/_custom_type_script = "uid://c4qwv3ps2l23x"

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 0.5, 0, 0, 0, 20, 0, -0.257234, 0)
mesh = SubResource("BoxMesh_lquwl")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7mycd")

[node name="Target" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.1, -0.3, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target"]
shape = SubResource("BoxShape3D_ig7tw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target"]
mesh = SubResource("BoxMesh_1bvp3")

[node name="Walls" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0.5, 0)
shape = SubResource("BoxShape3D_lquwl")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 0.5, 0)
shape = SubResource("BoxShape3D_lquwl")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 10)
shape = SubResource("BoxShape3D_lquwl")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -10)
shape = SubResource("BoxShape3D_lquwl")

[connection signal="body_entered" from="Target" to="player" method="_on_target_body_entered"]
[connection signal="body_entered" from="Walls" to="player" method="_on_walls_body_entered"]
